# inspect

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLEANING_DUTY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  INSPECT_BIBLEv6.2.md  INSPECT_HELP_IMPLEMENTATION_PLAN.md  INSPECT_v0.1.1_IMPLEMENTATION_PLAN.md  INSPECT_v0.1.2_BACKLOG.md  INSPECT_v0.1.3.1_PATCH_BACKLOG.md  INSPECT_v0.1.3_BACKLOG.md  INSPECT_v0.1.3_JAQ_PLAN.md  LICENSE  README.md  SECURITY.md  audit.md  build.rs
.github/workflows/: ci.yml  release.yml
archives/: DEADCODE_CLEANUP_PLAN.md  INSPECT_AUDIT_CHECKLIST.md  INSPECT_FIELD_PITFALLS.md  INSPECT_HELP_BIBLE.md  INSPECT_HELP_IMPLEMENTATION_PLAN.md  INSPECT_v0.1.1_PATCH_SPEC.md  PROMPT_DEADCODE_CLEANUP.md  README.md  audit.md  inspec-clifeedback.md
archives/v0.1.2/: README.md
archives/v0.1.3/: INSPECT_ROADMAP_TO_v01.3.md  INSPECT_v0.1.3_JAQ_PLAN.md  INSPECT_v013_PAIN_POINT_AUDIT.md  INSPECT_v013_SECURITY_AUDIT.md  README.md  SMOKE_v0.1.3.md  SMOKE_v0.1.3_JAQ.md  painpoint_audit_fix.md
docs/: MANUAL.md  RELEASING.md  RUNBOOK.md  SMOKE_v0.1.3.md  SMOKE_v0.1.3_JAQ.md
packaging/homebrew/: inspect.rb
scripts/: install.sh
src/: alias.rs  cli.rs  error.rs  main.rs  paths.rs  redact.rs  transcript.rs
src/bundle/: checks.rs  exec.rs  mod.rs  schema.rs  vars.rs
src/commands/: add.rs  alias.rs  audit.rs  bundle.rs  cache.rs  connect.rs  connections.rs  connectivity.rs  disconnect.rs  disconnect_all.rs  fleet.rs  help.rs  history.rs  keychain.rs  list.rs  mod.rs  placeholders.rs  profile.rs  query.rs  recipe.rs  remove.rs  resolve.rs  revert.rs  search.rs  setup.rs  show.rs  ssh.rs  test.rs  why.rs
src/config/: env.rs  file.rs  global.rs  groups.rs  mod.rs  namespace.rs  resolver.rs
src/discovery/: drift.rs  engine.rs  mod.rs  ports_parse.rs  probes.rs  ssh_precheck.rs
src/exec/: cancel.rs  dispatch.rs  engine.rs  env_overlay.rs  field_filter.rs  format.rs  map_stage.rs  medium.rs  metric.rs  mod.rs  parsers.rs  pipeline.rs  record.rs
src/exec/reader/: dir.rs  discovery.rs  file.rs  host.rs  image.rs  logs.rs  mod.rs  network.rs  state.rs  volume.rs
src/format/: mod.rs  render.rs  safe.rs  template.rs
src/help/: json.rs  mod.rs  render.rs  search.rs  topics.rs
src/help/content/: aliases.md  bundle.md  compose.md  discovery.md  examples.md  fleet.md  formats.md  quickstart.md  recipes.md  (+7 more)
src/keychain/: index.rs  mod.rs
src/logql/: alias_subst.rs  ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  tests.rs  validate.rs
src/profile/: cache.rs  mod.rs  runtime.rs  schema.rs
src/query/: jaq.rs  mod.rs  ndjson.rs  raw.rs  tests.rs
src/redact/: env.rs  header.rs  mod.rs  pem.rs  url.rs
src/safety/: audit.rs  diff.rs  gate.rs  gc.rs  mod.rs  snapshot.rs
src/selector/: ast.rs  mod.rs  parser.rs  resolve.rs
src/ssh/: askpass.rs  concurrency.rs  exec.rs  master.rs  mod.rs  options.rs  transport.rs  ttl.rs
src/sys/: mod.rs  ulimit.rs
src/transcript/: rotate.rs
src/verbs/: cache.rs  cat.rs  correlation.rs  cursor.rs  dispatch.rs  duration.rs  find.rs  grep.rs  health.rs  images.rs  line_filter.rs  logs.rs  ls.rs  merged.rs  mod.rs  network.rs  output.rs  ports.rs  progress.rs  ps.rs  quote.rs  run.rs  runtime.rs  status.rs  steps.rs  transfer.rs  volumes.rs  watch.rs
tests/: b10_watch.rs  b1_ssh_precheck.rs  b7_heartbeat.rs  b8_no_truncate_flag.rs  b9_bundle.rs  error_help_links.rs  help_contract.rs  help_json_snapshot.rs  help_regression_demo.md  jaq_query_v013.rs  jaq_select_v013.rs  no_dead_code.rs  no_pwd_writes.rs  phase0_namespaces.rs  phase10_3_formats.rs  phase10_output_contract.rs  phase11_fleet.rs  phase1_ssh_lifecycle.rs  phase2_discovery.rs  phase3_selector.rs  phase4_read_verbs.rs  phase5_write_verbs.rs  phase6_logql.rs  phase7_exec.rs  phase8_perf.rs  phase9_diagnostics.rs  phase_a_v011.rs  phase_b_v011.rs  phase_c_v011.rs  phase_f_v013.rs
tests/golden/: help_json_skeleton.json
(+30 files in other folders)
