[package]
name = "inspect-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Operational debugging CLI for cross-server search and safe hot-fix application"
license = "Apache-2.0"
repository = "https://github.com/jpbeaudet/inspect"
readme = "README.md"
publish = false

[[bin]]
name = "inspect"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
dirs = "5"
regex = "1"
base64 = "0.22"
once_cell = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
