[package]
name = "inspect-cli"
version = "0.1.3"
edition = "2021"
rust-version = "1.75"
description = "Operational debugging CLI for cross-server search and safe hot-fix application"
license = "Apache-2.0"
repository = "https://github.com/jpbeaudet/inspect"
homepage = "https://github.com/jpbeaudet/inspect"
documentation = "https://github.com/jpbeaudet/inspect"
readme = "README.md"
keywords = ["ssh", "docker", "ops", "logs", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["archives/*", "target/*", "tests/*", ".github/*"]

[[bin]]
name = "inspect"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
regex = "1"
base64 = "0.22"
rpassword = "7"
zeroize = { version = "1", features = ["zeroize_derive"] }
tempfile = "3"
serde_yaml = "0.9"
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
similar = "2"
unicode-width = "0.1"
flate2 = "1"
# L2 (v0.1.3): OS keychain for opt-in cross-session passphrase / password
# persistence. Pre-approved in INSPECT_v0.1.3_BACKLOG.md (L2 spec). Feature
# selection picks the native backend on each platform: macOS Keychain,
# Windows Credential Manager (also reachable from WSL2), Linux Secret
# Service (GNOME Keyring / KDE Wallet) with pure-Rust crypto so we don't
# depend on system OpenSSL.
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust", "vendored"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0

[lints.rust]
dead_code = "deny"
